--- a/busy_kiddos/pubspec.yaml
+++ b/busy_kiddos/pubspec.yaml
@@ -70,6 +70,10 @@ flutter:
     - family: RoundedElegance
       fonts:
         - asset: fonts/RoundedElegance.ttf
+    fonts:
+    - family: fonts/kidsfont.ttf     
+      fonts:
+        - asset: assets/kidsfont.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
