--- a/busy_kiddos/pubspec.yaml
+++ b/busy_kiddos/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
 
   assets:
     - assets/icon.jpg
+    - assets/icon2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
